--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -839,18 +839,6 @@ img {
   left: 0px;
 }
 
-.-left-full{
-  left: -100%;
-}
-
-.right-5{
-  right: 1.25rem;
-}
-
-.top-5{
-  top: 1.25rem;
-}
-
 .top-10{
   top: 2.5rem;
 }
@@ -952,14 +940,14 @@ img {
   margin-bottom: 1rem;
 }
 
-.my-10{
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .my-8{
@@ -988,6 +976,14 @@ img {
 
 .mb-12{
   margin-bottom: 3rem;
+}
+
+.mt-1{
+  margin-top: 0.25rem;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
 }
 
 .ml-auto{
@@ -1046,10 +1042,6 @@ img {
   margin-bottom: 1.75rem;
 }
 
-.mb-2{
-  margin-bottom: 0.5rem;
-}
-
 .ml-5{
   margin-left: 1.25rem;
 }
@@ -1064,10 +1056,6 @@ img {
 
 .-mr-14{
   margin-right: -3.5rem;
-}
-
-.mt-1{
-  margin-top: 0.25rem;
 }
 
 .block{
@@ -1106,16 +1094,12 @@ img {
   height: 18rem;
 }
 
-.h-24{
-  height: 6rem;
-}
-
-.h-full{
-  height: 100%;
-}
-
 .h-10{
   height: 2.5rem;
+}
+
+.h-60{
+  height: 15rem;
 }
 
 .h-14{
@@ -1126,8 +1110,8 @@ img {
   height: 16rem;
 }
 
-.h-60{
-  height: 15rem;
+.h-full{
+  height: 100%;
 }
 
 .h-36{
@@ -1164,10 +1148,6 @@ img {
 
 .h-40{
   height: 10rem;
-}
-
-.h-80{
-  height: 20rem;
 }
 
 .max-h-full{
@@ -1208,10 +1188,6 @@ img {
 
 .w-64{
   width: 16rem;
-}
-
-.w-16{
-  width: 4rem;
 }
 
 .w-14{
@@ -1450,6 +1426,14 @@ img {
   gap: 2.5rem;
 }
 
+.gap-8{
+  gap: 2rem;
+}
+
+.gap-1{
+  gap: 0.25rem;
+}
+
 .gap-12{
   gap: 3rem;
 }
@@ -1462,20 +1446,8 @@ img {
   gap: 0.75rem;
 }
 
-.gap-8{
-  gap: 2rem;
-}
-
-.gap-1{
-  gap: 0.25rem;
-}
-
 .gap-7{
   gap: 1.75rem;
-}
-
-.gap-6{
-  gap: 1.5rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1598,12 +1570,12 @@ img {
   border-right-width: 1px;
 }
 
-.border-t-2{
-  border-top-width: 2px;
-}
-
 .border-b-2{
   border-bottom-width: 2px;
+}
+
+.border-t-2{
+  border-top-width: 2px;
 }
 
 .border-l-2{
@@ -1638,6 +1610,11 @@ img {
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
 }
 
+.border-gray-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
 .border-gray-200{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
@@ -1650,11 +1627,6 @@ img {
 
 .border-transparent{
   border-color: transparent;
-}
-
-.border-gray-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .border-slate-900{
@@ -1710,6 +1682,16 @@ img {
   background-color: rgb(0 0 0 / 0);
 }
 
+.bg-red-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+}
+
+.bg-green-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
+}
+
 .bg-black\/70{
   background-color: rgb(0 0 0 / 0.7);
 }
@@ -1722,16 +1704,6 @@ img {
 .bg-zinc-800{
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
-}
-
-.bg-red-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
-}
-
-.bg-green-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
 }
 
 .bg-slate-50{
@@ -1940,10 +1912,6 @@ img {
   padding-top: 0.75rem;
 }
 
-.pb-2{
-  padding-bottom: 0.5rem;
-}
-
 .pt-2{
   padding-top: 0.5rem;
 }
@@ -1978,6 +1946,10 @@ img {
 
 .pt-14{
   padding-top: 3.5rem;
+}
+
+.pb-2{
+  padding-bottom: 0.5rem;
 }
 
 .pt-1{
@@ -2089,16 +2061,16 @@ img {
   font-weight: 500;
 }
 
+.font-semibold{
+  font-weight: 600;
+}
+
 .font-normal{
   font-weight: 400;
 }
 
 .font-light{
   font-weight: 300;
-}
-
-.font-semibold{
-  font-weight: 600;
 }
 
 .font-thin{
@@ -2136,11 +2108,6 @@ img {
 .text-zinc-800{
   --tw-text-opacity: 1;
   color: rgb(39 39 42 / var(--tw-text-opacity));
-}
-
-.text-zinc-400{
-  --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
 }
 
 .text-gray-700{
@@ -2213,6 +2180,16 @@ img {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-red-800{
+  --tw-text-opacity: 1;
+  color: rgb(153 27 27 / var(--tw-text-opacity));
+}
+
+.text-green-800{
+  --tw-text-opacity: 1;
+  color: rgb(22 101 52 / var(--tw-text-opacity));
+}
+
 .text-slate-50{
   --tw-text-opacity: 1;
   color: rgb(248 250 252 / var(--tw-text-opacity));
@@ -2226,16 +2203,6 @@ img {
 .text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-red-800{
-  --tw-text-opacity: 1;
-  color: rgb(153 27 27 / var(--tw-text-opacity));
-}
-
-.text-green-800{
-  --tw-text-opacity: 1;
-  color: rgb(22 101 52 / var(--tw-text-opacity));
 }
 
 .text-gray-500{
@@ -2338,6 +2305,12 @@ img {
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-inner{
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2696,23 +2669,6 @@ img {
 
 @media (min-width: 1024px){
 
-  .lg\:sticky{
-    position: -webkit-sticky;
-    position: sticky;
-  }
-
-  .lg\:top-10{
-    top: 2.5rem;
-  }
-
-  .lg\:left-0{
-    left: 0px;
-  }
-
-  .lg\:z-\[1\]{
-    z-index: 1;
-  }
-
   .lg\:order-1{
     order: 1;
   }
@@ -2747,10 +2703,6 @@ img {
 
   .lg\:hidden{
     display: none;
-  }
-
-  .lg\:h-auto{
-    height: auto;
   }
 
   .lg\:w-72{
