--- a/public/css/app.css
+++ b/public/css/app.css
@@ -462,9 +462,6 @@ body {
 .right-0{ right: 0px; }
 .top-0{ top: 0px; }
 .left-0{ left: 0px; }
-.-left-full{ left: -100%; }
-.right-5{ right: 1.25rem; }
-.top-5{ top: 1.25rem; }
 .top-10{ top: 2.5rem; }
 .top-3{ top: 0.75rem; }
 .right-3{ right: 0.75rem; }
@@ -490,14 +487,16 @@ body {
 .col-span-3{ grid-column: span 3 / span 3; }
 .col-span-12{ grid-column: span 12 / span 12; }
 .my-4{ margin-top: 1rem; margin-bottom: 1rem; }
-.my-10{ margin-top: 2.5rem; margin-bottom: 2.5rem; }
 .mx-auto{ margin-left: auto; margin-right: auto; }
+.my-10{ margin-top: 2.5rem; margin-bottom: 2.5rem; }
 .my-8{ margin-top: 2rem; margin-bottom: 2rem; }
 .mx-2{ margin-left: 0.5rem; margin-right: 0.5rem; }
 .mx-4{ margin-left: 1rem; margin-right: 1rem; }
 .my-3{ margin-top: 0.75rem; margin-bottom: 0.75rem; }
 .mt-8{ margin-top: 2rem; }
 .mb-12{ margin-bottom: 3rem; }
+.mt-1{ margin-top: 0.25rem; }
+.mb-2{ margin-bottom: 0.5rem; }
 .ml-auto{ margin-left: auto; }
 .mt-4{ margin-top: 1rem; }
 .mt-10{ margin-top: 2.5rem; }
@@ -512,12 +511,10 @@ body {
 .ml-3{ margin-left: 0.75rem; }
 .mb-5{ margin-bottom: 1.25rem; }
 .mb-7{ margin-bottom: 1.75rem; }
-.mb-2{ margin-bottom: 0.5rem; }
 .ml-5{ margin-left: 1.25rem; }
 .mt-2{ margin-top: 0.5rem; }
 .ml-2{ margin-left: 0.5rem; }
 .-mr-14{ margin-right: -3.5rem; }
-.mt-1{ margin-top: 0.25rem; }
 .block{ display: block; }
 .inline-block{ display: inline-block; }
 .flex{ display: flex; }
@@ -527,12 +524,11 @@ body {
 .hidden{ display: none; }
 .h-28{ height: 7rem; }
 .h-72{ height: 18rem; }
-.h-24{ height: 6rem; }
-.h-full{ height: 100%; }
 .h-10{ height: 2.5rem; }
+.h-60{ height: 15rem; }
 .h-14{ height: 3.5rem; }
 .h-64{ height: 16rem; }
-.h-60{ height: 15rem; }
+.h-full{ height: 100%; }
 .h-36{ height: 9rem; }
 .h-screen{ height: 100vh; }
 .h-96{ height: 24rem; }
@@ -542,7 +538,6 @@ body {
 .h-5{ height: 1.25rem; }
 .h-6{ height: 1.5rem; }
 .h-40{ height: 10rem; }
-.h-80{ height: 20rem; }
 .max-h-full{ max-height: 100%; }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{ max-height: calc(100vh - 4rem); }
 .max-h-40{ max-height: 10rem; }
@@ -553,7 +548,6 @@ body {
 .w-28{ width: 7rem; }
 .w-full{ width: 100%; }
 .w-64{ width: 16rem; }
-.w-16{ width: 4rem; }
 .w-14{ width: 3.5rem; }
 .w-72{ width: 18rem; }
 .w-20{ width: 5rem; }
@@ -615,13 +609,12 @@ body {
 .gap-20{ gap: 5rem; }
 .gap-4{ gap: 1rem; }
 .gap-10{ gap: 2.5rem; }
+.gap-8{ gap: 2rem; }
+.gap-1{ gap: 0.25rem; }
 .gap-12{ gap: 3rem; }
 .gap-5{ gap: 1.25rem; }
 .gap-3{ gap: 0.75rem; }
-.gap-8{ gap: 2rem; }
-.gap-1{ gap: 0.25rem; }
 .gap-7{ gap: 1.75rem; }
-.gap-6{ gap: 1.5rem; }
 .divide-y > :not([hidden]) ~ :not([hidden]){ --tw-divide-y-reverse: 0; border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse))); border-bottom-width: calc(1px * var(--tw-divide-y-reverse)); }
 .divide-zinc-700 > :not([hidden]) ~ :not([hidden]){ --tw-divide-opacity: 1; border-color: rgb(63 63 70 / var(--tw-divide-opacity)); }
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]){ --tw-divide-opacity: 1; border-color: rgb(243 244 246 / var(--tw-divide-opacity)); }
@@ -649,8 +642,8 @@ body {
 .border-t{ border-top-width: 1px; }
 .border-l{ border-left-width: 1px; }
 .border-r{ border-right-width: 1px; }
-.border-t-2{ border-top-width: 2px; }
 .border-b-2{ border-bottom-width: 2px; }
+.border-t-2{ border-top-width: 2px; }
 .border-l-2{ border-left-width: 2px; }
 .border-solid{ border-style: solid; }
 .border-dashed{ border-style: dashed; }
@@ -658,10 +651,10 @@ body {
 .border-zinc-200{ --tw-border-opacity: 1; border-color: rgb(228 228 231 / var(--tw-border-opacity)); }
 .border-blue-500{ --tw-border-opacity: 1; border-color: rgb(59 130 246 / var(--tw-border-opacity)); }
 .border-red-400{ --tw-border-opacity: 1; border-color: rgb(248 113 113 / var(--tw-border-opacity)); }
+.border-gray-300{ --tw-border-opacity: 1; border-color: rgb(209 213 219 / var(--tw-border-opacity)); }
 .border-gray-200{ --tw-border-opacity: 1; border-color: rgb(229 231 235 / var(--tw-border-opacity)); }
 .border-zinc-700{ --tw-border-opacity: 1; border-color: rgb(63 63 70 / var(--tw-border-opacity)); }
 .border-transparent{ border-color: transparent; }
-.border-gray-300{ --tw-border-opacity: 1; border-color: rgb(209 213 219 / var(--tw-border-opacity)); }
 .border-slate-900{ --tw-border-opacity: 1; border-color: rgb(15 23 42 / var(--tw-border-opacity)); }
 .border-slate-800{ --tw-border-opacity: 1; border-color: rgb(30 41 59 / var(--tw-border-opacity)); }
 .bg-white{ --tw-bg-opacity: 1; background-color: rgb(255 255 255 / var(--tw-bg-opacity)); }
@@ -673,11 +666,11 @@ body {
 .bg-orange-300{ --tw-bg-opacity: 1; background-color: rgb(253 186 116 / var(--tw-bg-opacity)); }
 .bg-black\/80{ background-color: rgb(0 0 0 / 0.8); }
 .bg-black\/0{ background-color: rgb(0 0 0 / 0); }
+.bg-red-100{ --tw-bg-opacity: 1; background-color: rgb(254 226 226 / var(--tw-bg-opacity)); }
+.bg-green-100{ --tw-bg-opacity: 1; background-color: rgb(220 252 231 / var(--tw-bg-opacity)); }
 .bg-black\/70{ background-color: rgb(0 0 0 / 0.7); }
 .bg-zinc-900{ --tw-bg-opacity: 1; background-color: rgb(24 24 27 / var(--tw-bg-opacity)); }
 .bg-zinc-800{ --tw-bg-opacity: 1; background-color: rgb(39 39 42 / var(--tw-bg-opacity)); }
-.bg-red-100{ --tw-bg-opacity: 1; background-color: rgb(254 226 226 / var(--tw-bg-opacity)); }
-.bg-green-100{ --tw-bg-opacity: 1; background-color: rgb(220 252 231 / var(--tw-bg-opacity)); }
 .bg-slate-50{ --tw-bg-opacity: 1; background-color: rgb(248 250 252 / var(--tw-bg-opacity)); }
 .bg-slate-800{ --tw-bg-opacity: 1; background-color: rgb(30 41 59 / var(--tw-bg-opacity)); }
 .bg-slate-900{ --tw-bg-opacity: 1; background-color: rgb(15 23 42 / var(--tw-bg-opacity)); }
@@ -722,7 +715,6 @@ body {
 .pb-4{ padding-bottom: 1rem; }
 .pt-4{ padding-top: 1rem; }
 .pt-3{ padding-top: 0.75rem; }
-.pb-2{ padding-bottom: 0.5rem; }
 .pt-2{ padding-top: 0.5rem; }
 .pl-4{ padding-left: 1rem; }
 .pt-28{ padding-top: 7rem; }
@@ -732,6 +724,7 @@ body {
 .pt-8{ padding-top: 2rem; }
 .pb-6{ padding-bottom: 1.5rem; }
 .pt-14{ padding-top: 3.5rem; }
+.pb-2{ padding-bottom: 0.5rem; }
 .pt-1{ padding-top: 0.25rem; }
 .pl-3{ padding-left: 0.75rem; }
 .pr-52{ padding-right: 13rem; }
@@ -757,9 +750,9 @@ body {
 .text-5xl{ font-size: 3rem; line-height: 1; }
 .text-base{ font-size: 1rem; line-height: 1.5rem; }
 .font-medium{ font-weight: 500; }
+.font-semibold{ font-weight: 600; }
 .font-normal{ font-weight: 400; }
 .font-light{ font-weight: 300; }
-.font-semibold{ font-weight: 600; }
 .font-thin{ font-weight: 100; }
 .uppercase{ text-transform: uppercase; }
 .tracking-wider{ letter-spacing: 0.05em; }
@@ -768,7 +761,6 @@ body {
 .text-zinc-700{ --tw-text-opacity: 1; color: rgb(63 63 70 / var(--tw-text-opacity)); }
 .text-blue-600{ --tw-text-opacity: 1; color: rgb(37 99 235 / var(--tw-text-opacity)); }
 .text-zinc-800{ --tw-text-opacity: 1; color: rgb(39 39 42 / var(--tw-text-opacity)); }
-.text-zinc-400{ --tw-text-opacity: 1; color: rgb(161 161 170 / var(--tw-text-opacity)); }
 .text-gray-700{ --tw-text-opacity: 1; color: rgb(55 65 81 / var(--tw-text-opacity)); }
 .text-zinc-900{ --tw-text-opacity: 1; color: rgb(24 24 27 / var(--tw-text-opacity)); }
 .text-zinc-500{ --tw-text-opacity: 1; color: rgb(113 113 122 / var(--tw-text-opacity)); }
@@ -783,11 +775,11 @@ body {
 .text-gray-600{ --tw-text-opacity: 1; color: rgb(75 85 99 / var(--tw-text-opacity)); }
 .text-gray-900{ --tw-text-opacity: 1; color: rgb(17 24 39 / var(--tw-text-opacity)); }
 .text-red-500{ --tw-text-opacity: 1; color: rgb(239 68 68 / var(--tw-text-opacity)); }
+.text-red-800{ --tw-text-opacity: 1; color: rgb(153 27 27 / var(--tw-text-opacity)); }
+.text-green-800{ --tw-text-opacity: 1; color: rgb(22 101 52 / var(--tw-text-opacity)); }
 .text-slate-50{ --tw-text-opacity: 1; color: rgb(248 250 252 / var(--tw-text-opacity)); }
 .text-stone-800{ --tw-text-opacity: 1; color: rgb(41 37 36 / var(--tw-text-opacity)); }
 .text-black{ --tw-text-opacity: 1; color: rgb(0 0 0 / var(--tw-text-opacity)); }
-.text-red-800{ --tw-text-opacity: 1; color: rgb(153 27 27 / var(--tw-text-opacity)); }
-.text-green-800{ --tw-text-opacity: 1; color: rgb(22 101 52 / var(--tw-text-opacity)); }
 .text-gray-500{ --tw-text-opacity: 1; color: rgb(107 114 128 / var(--tw-text-opacity)); }
 .\!text-white{ --tw-text-opacity: 1 !important; color: rgb(255 255 255 / var(--tw-text-opacity)) !important; }
 .text-green-500{ --tw-text-opacity: 1; color: rgb(34 197 94 / var(--tw-text-opacity)); }
@@ -809,6 +801,7 @@ body {
 .shadow-lg{ --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color); box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow); }
 .shadow{ --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1); --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color); box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow); }
 .shadow-sm{ --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05); --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color); box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow); }
+.shadow-inner{ --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05); --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color); box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow); }
 .outline{ outline-style: solid; }
 .outline-2{ outline-width: 2px; }
 .outline-offset-1{ outline-offset: 1px; }
@@ -958,14 +951,6 @@ body {
 
 @media (min-width: 1024px){
 
- .lg\:sticky{ position: -webkit-sticky; position: sticky; }
-
- .lg\:top-10{ top: 2.5rem; }
-
- .lg\:left-0{ left: 0px; }
-
- .lg\:z-\[1\]{ z-index: 1; }
-
  .lg\:order-1{ order: 1; }
 
  .lg\:col-span-2{ grid-column: span 2 / span 2; }
@@ -983,8 +968,6 @@ body {
  .lg\:grid{ display: grid; }
 
  .lg\:hidden{ display: none; }
-
- .lg\:h-auto{ height: auto; }
 
  .lg\:w-72{ width: 18rem; }
 
