--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -955,11 +955,6 @@ img {
   margin-bottom: 2rem;
 }
 
-.mx-2{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
 .mx-4{
   margin-left: 1rem;
   margin-right: 1rem;
@@ -1034,6 +1029,10 @@ img {
   margin-left: 0.75rem;
 }
 
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -1044,10 +1043,6 @@ img {
 
 .ml-5{
   margin-left: 1.25rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
 }
 
 .ml-2{
@@ -1210,16 +1205,16 @@ img {
   width: 33.333333%;
 }
 
-.w-1\/2{
-  width: 50%;
-}
-
 .w-96{
   width: 24rem;
 }
 
 .w-5{
   width: 1.25rem;
+}
+
+.w-1\/2{
+  width: 50%;
 }
 
 .w-3\/5{
@@ -2199,6 +2194,11 @@ img {
 .text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-blue-500{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .text-gray-500{
