--- a/public/css/app.css
+++ b/public/css/app.css
@@ -490,7 +490,6 @@ body {
 .mx-auto{ margin-left: auto; margin-right: auto; }
 .my-10{ margin-top: 2.5rem; margin-bottom: 2.5rem; }
 .my-8{ margin-top: 2rem; margin-bottom: 2rem; }
-.mx-2{ margin-left: 0.5rem; margin-right: 0.5rem; }
 .mx-4{ margin-left: 1rem; margin-right: 1rem; }
 .my-3{ margin-top: 0.75rem; margin-bottom: 0.75rem; }
 .mt-8{ margin-top: 2rem; }
@@ -509,10 +508,10 @@ body {
 .mt-7{ margin-top: 1.75rem; }
 .mr-auto{ margin-right: auto; }
 .ml-3{ margin-left: 0.75rem; }
+.mt-2{ margin-top: 0.5rem; }
 .mb-5{ margin-bottom: 1.25rem; }
 .mb-7{ margin-bottom: 1.75rem; }
 .ml-5{ margin-left: 1.25rem; }
-.mt-2{ margin-top: 0.5rem; }
 .ml-2{ margin-left: 0.5rem; }
 .-mr-14{ margin-right: -3.5rem; }
 .block{ display: block; }
@@ -553,9 +552,9 @@ body {
 .w-20{ width: 5rem; }
 .w-3\/4{ width: 75%; }
 .w-1\/3{ width: 33.333333%; }
-.w-1\/2{ width: 50%; }
 .w-96{ width: 24rem; }
 .w-5{ width: 1.25rem; }
+.w-1\/2{ width: 50%; }
 .w-3\/5{ width: 60%; }
 .w-12{ width: 3rem; }
 .w-80{ width: 20rem; }
@@ -779,6 +778,7 @@ body {
 .text-slate-50{ --tw-text-opacity: 1; color: rgb(248 250 252 / var(--tw-text-opacity)); }
 .text-stone-800{ --tw-text-opacity: 1; color: rgb(41 37 36 / var(--tw-text-opacity)); }
 .text-black{ --tw-text-opacity: 1; color: rgb(0 0 0 / var(--tw-text-opacity)); }
+.text-blue-500{ --tw-text-opacity: 1; color: rgb(59 130 246 / var(--tw-text-opacity)); }
 .text-gray-500{ --tw-text-opacity: 1; color: rgb(107 114 128 / var(--tw-text-opacity)); }
 .\!text-white{ --tw-text-opacity: 1 !important; color: rgb(255 255 255 / var(--tw-text-opacity)) !important; }
 .text-green-500{ --tw-text-opacity: 1; color: rgb(34 197 94 / var(--tw-text-opacity)); }
