--- a/public/css/app.css
+++ b/public/css/app.css
@@ -678,6 +678,8 @@ body {
 .bg-sky-100{ --tw-bg-opacity: 1; background-color: rgb(224 242 254 / var(--tw-bg-opacity)); }
 .bg-sky-50{ --tw-bg-opacity: 1; background-color: rgb(240 249 255 / var(--tw-bg-opacity)); }
 .bg-slate-200{ --tw-bg-opacity: 1; background-color: rgb(226 232 240 / var(--tw-bg-opacity)); }
+.bg-gray-300{ --tw-bg-opacity: 1; background-color: rgb(209 213 219 / var(--tw-bg-opacity)); }
+.bg-blue-100{ --tw-bg-opacity: 1; background-color: rgb(219 234 254 / var(--tw-bg-opacity)); }
 .object-contain{ -o-object-fit: contain; object-fit: contain; }
 .object-cover{ -o-object-fit: cover; object-fit: cover; }
 .p-4{ padding: 1rem; }
@@ -788,6 +790,9 @@ body {
 .text-green-700{ --tw-text-opacity: 1; color: rgb(21 128 61 / var(--tw-text-opacity)); }
 .text-gray-300{ --tw-text-opacity: 1; color: rgb(209 213 219 / var(--tw-text-opacity)); }
 .text-gray-400{ --tw-text-opacity: 1; color: rgb(156 163 175 / var(--tw-text-opacity)); }
+.text-green-900{ --tw-text-opacity: 1; color: rgb(20 83 45 / var(--tw-text-opacity)); }
+.text-blue-900{ --tw-text-opacity: 1; color: rgb(30 58 138 / var(--tw-text-opacity)); }
+.text-yellow-900{ --tw-text-opacity: 1; color: rgb(113 63 18 / var(--tw-text-opacity)); }
 .underline{ -webkit-text-decoration-line: underline; text-decoration-line: underline; }
 .placeholder-zinc-400::-moz-placeholder{ --tw-placeholder-opacity: 1; color: rgb(161 161 170 / var(--tw-placeholder-opacity)); }
 .placeholder-zinc-400:-ms-input-placeholder{ --tw-placeholder-opacity: 1; color: rgb(161 161 170 / var(--tw-placeholder-opacity)); }
